--- a/openApiDocs/v1.0/People.yml
+++ b/openApiDocs/v1.0/People.yml
@@ -11,7 +11,7 @@ paths:
       tags:
         - users.officeGraphInsights
       summary: Get insights from users
-      operationId: users_GetInsights
+      operationId: user_GetInsights
       parameters:
         - name: user-id
           in: path
@@ -65,7 +65,7 @@ paths:
       tags:
         - users.officeGraphInsights
       summary: Update the navigation property insights in users
-      operationId: users_UpdateInsights
+      operationId: user_UpdateInsights
       parameters:
         - name: user-id
           in: path
@@ -84,11 +84,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.officeGraphInsights'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -96,7 +92,7 @@ paths:
       tags:
         - users.officeGraphInsights
       summary: Delete navigation property insights for users
-      operationId: users_DeleteInsights
+      operationId: user_DeleteInsights
       parameters:
         - name: user-id
           in: path
@@ -124,7 +120,7 @@ paths:
         - users.officeGraphInsights
       summary: Get shared from users
       description: 'Calculated relationship identifying documents shared with or by the user. This includes URLs, file attachments, and reference attachments to OneDrive for Business and SharePoint files found in Outlook messages and meetings. This also includes URLs and reference attachments to Teams conversations. Ordered by recency of share.'
-      operationId: users.insights_ListShared
+      operationId: user.insight_ListShared
       parameters:
         - name: user-id
           in: path
@@ -205,7 +201,7 @@ paths:
       tags:
         - users.officeGraphInsights
       summary: Create new navigation property to shared for users
-      operationId: users.insights_CreateShared
+      operationId: user.insight_CreateShared
       parameters:
         - name: user-id
           in: path
@@ -238,7 +234,7 @@ paths:
         - users.officeGraphInsights
       summary: Get shared from users
       description: 'Calculated relationship identifying documents shared with or by the user. This includes URLs, file attachments, and reference attachments to OneDrive for Business and SharePoint files found in Outlook messages and meetings. This also includes URLs and reference attachments to Teams conversations. Ordered by recency of share.'
-      operationId: users.insights_GetShared
+      operationId: user.insight_GetShared
       parameters:
         - name: user-id
           in: path
@@ -302,7 +298,7 @@ paths:
       tags:
         - users.officeGraphInsights
       summary: Update the navigation property shared in users
-      operationId: users.insights_UpdateShared
+      operationId: user.insight_UpdateShared
       parameters:
         - name: user-id
           in: path
@@ -329,11 +325,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.sharedInsight'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -341,7 +333,7 @@ paths:
       tags:
         - users.officeGraphInsights
       summary: Delete navigation property shared for users
-      operationId: users.insights_DeleteShared
+      operationId: user.insight_DeleteShared
       parameters:
         - name: user-id
           in: path
@@ -376,7 +368,7 @@ paths:
       tags:
         - users.officeGraphInsights
       summary: Get lastSharedMethod from users
-      operationId: users.insights.shared_GetLastSharedMethod
+      operationId: user.insight.shared_GetLastSharedMethod
       parameters:
         - name: user-id
           in: path
@@ -434,7 +426,7 @@ paths:
         - users.officeGraphInsights
       summary: Get resource from users
       description: 'Used for navigating to the item that was shared. For file attachments, the type is fileAttachment. For linked attachments, the type is driveItem.'
-      operationId: users.insights.shared_GetResource
+      operationId: user.insight.shared_GetResource
       parameters:
         - name: user-id
           in: path
@@ -492,7 +484,7 @@ paths:
         - users.officeGraphInsights
       summary: Get trending from users
       description: 'Calculated relationship identifying documents trending around a user. Trending documents are calculated based on activity of the user''s closest network of people and include files stored in OneDrive for Business and SharePoint. Trending insights help the user to discover potentially useful content that the user has access to, but has never viewed before.'
-      operationId: users.insights_ListTrending
+      operationId: user.insight_ListTrending
       parameters:
         - name: user-id
           in: path
@@ -571,7 +563,7 @@ paths:
       tags:
         - users.officeGraphInsights
       summary: Create new navigation property to trending for users
-      operationId: users.insights_CreateTrending
+      operationId: user.insight_CreateTrending
       parameters:
         - name: user-id
           in: path
@@ -604,7 +596,7 @@ paths:
         - users.officeGraphInsights
       summary: Get trending from users
       description: 'Calculated relationship identifying documents trending around a user. Trending documents are calculated based on activity of the user''s closest network of people and include files stored in OneDrive for Business and SharePoint. Trending insights help the user to discover potentially useful content that the user has access to, but has never viewed before.'
-      operationId: users.insights_GetTrending
+      operationId: user.insight_GetTrending
       parameters:
         - name: user-id
           in: path
@@ -666,7 +658,7 @@ paths:
       tags:
         - users.officeGraphInsights
       summary: Update the navigation property trending in users
-      operationId: users.insights_UpdateTrending
+      operationId: user.insight_UpdateTrending
       parameters:
         - name: user-id
           in: path
@@ -693,11 +685,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.trending'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -705,7 +693,7 @@ paths:
       tags:
         - users.officeGraphInsights
       summary: Delete navigation property trending for users
-      operationId: users.insights_DeleteTrending
+      operationId: user.insight_DeleteTrending
       parameters:
         - name: user-id
           in: path
@@ -741,7 +729,7 @@ paths:
         - users.officeGraphInsights
       summary: Get resource from users
       description: Used for navigating to the trending document.
-      operationId: users.insights.trending_GetResource
+      operationId: user.insight.trending_GetResource
       parameters:
         - name: user-id
           in: path
@@ -802,7 +790,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/insights-list-used?view=graph-rest-1.0
-      operationId: users.insights_ListUsed
+      operationId: user.insight_ListUsed
       parameters:
         - name: user-id
           in: path
@@ -878,7 +866,7 @@ paths:
       tags:
         - users.officeGraphInsights
       summary: Create new navigation property to used for users
-      operationId: users.insights_CreateUsed
+      operationId: user.insight_CreateUsed
       parameters:
         - name: user-id
           in: path
@@ -911,7 +899,7 @@ paths:
         - users.officeGraphInsights
       summary: Get used from users
       description: 'Calculated relationship identifying the latest documents viewed or modified by a user, including OneDrive for Business and SharePoint documents, ranked by recency of use.'
-      operationId: users.insights_GetUsed
+      operationId: user.insight_GetUsed
       parameters:
         - name: user-id
           in: path
@@ -972,7 +960,7 @@ paths:
       tags:
         - users.officeGraphInsights
       summary: Update the navigation property used in users
-      operationId: users.insights_UpdateUsed
+      operationId: user.insight_UpdateUsed
       parameters:
         - name: user-id
           in: path
@@ -999,11 +987,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.usedInsight'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -1011,7 +995,7 @@ paths:
       tags:
         - users.officeGraphInsights
       summary: Delete navigation property used for users
-      operationId: users.insights_DeleteUsed
+      operationId: user.insight_DeleteUsed
       parameters:
         - name: user-id
           in: path
@@ -1047,7 +1031,7 @@ paths:
         - users.officeGraphInsights
       summary: Get resource from users
       description: 'Used for navigating to the item that was used. For file attachments, the type is fileAttachment. For linked attachments, the type is driveItem.'
-      operationId: users.insights.used_GetResource
+      operationId: user.insight.used_GetResource
       parameters:
         - name: user-id
           in: path
@@ -1108,7 +1092,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/user-list-people?view=graph-rest-1.0
-      operationId: users_ListPeople
+      operationId: user_ListPeople
       parameters:
         - name: user-id
           in: path
@@ -1220,7 +1204,7 @@ paths:
         - users.person
       summary: Get people from users
       description: People that are relevant to the user. Read-only. Nullable.
-      operationId: users_GetPeople
+      operationId: user_GetPeople
       parameters:
         - name: user-id
           in: path
