--- a/openApiDocs/v1.0/DeviceManagement.Administration.yml
+++ b/openApiDocs/v1.0/DeviceManagement.Administration.yml
@@ -70,11 +70,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.applePushNotificationCertificate'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -294,11 +290,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.auditEvent'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -518,11 +510,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.complianceManagementPartner'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -742,11 +730,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.deviceManagementPartner'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -966,11 +950,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.deviceManagementExchangeConnector'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -1198,11 +1178,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.iosUpdateDeviceStatus'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -1446,11 +1422,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.mobileThreatDefenseConnector'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -1650,11 +1622,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.remoteAssistancePartner'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -1850,11 +1818,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.resourceOperation'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -2058,11 +2022,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.deviceAndAppManagementRoleAssignment'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -2266,11 +2226,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.roleDefinition'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -2306,7 +2262,7 @@ paths:
         - deviceManagement.roleDefinition
       summary: Get roleAssignments from deviceManagement
       description: List of Role assignments for this role definition.
-      operationId: deviceManagement.roleDefinitions_ListRoleAssignments
+      operationId: deviceManagement.roleDefinition_ListRoleAssignments
       parameters:
         - name: roleDefinition-id
           in: path
@@ -2382,7 +2338,7 @@ paths:
       tags:
         - deviceManagement.roleDefinition
       summary: Create new navigation property to roleAssignments for deviceManagement
-      operationId: deviceManagement.roleDefinitions_CreateRoleAssignments
+      operationId: deviceManagement.roleDefinition_CreateRoleAssignments
       parameters:
         - name: roleDefinition-id
           in: path
@@ -2415,7 +2371,7 @@ paths:
         - deviceManagement.roleDefinition
       summary: Get roleAssignments from deviceManagement
       description: List of Role assignments for this role definition.
-      operationId: deviceManagement.roleDefinitions_GetRoleAssignments
+      operationId: deviceManagement.roleDefinition_GetRoleAssignments
       parameters:
         - name: roleDefinition-id
           in: path
@@ -2476,7 +2432,7 @@ paths:
       tags:
         - deviceManagement.roleDefinition
       summary: Update the navigation property roleAssignments in deviceManagement
-      operationId: deviceManagement.roleDefinitions_UpdateRoleAssignments
+      operationId: deviceManagement.roleDefinition_UpdateRoleAssignments
       parameters:
         - name: roleDefinition-id
           in: path
@@ -2503,11 +2459,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.roleAssignment'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -2515,7 +2467,7 @@ paths:
       tags:
         - deviceManagement.roleDefinition
       summary: Delete navigation property roleAssignments for deviceManagement
-      operationId: deviceManagement.roleDefinitions_DeleteRoleAssignments
+      operationId: deviceManagement.roleDefinition_DeleteRoleAssignments
       parameters:
         - name: roleDefinition-id
           in: path
@@ -2551,7 +2503,7 @@ paths:
         - deviceManagement.roleDefinition
       summary: Get roleDefinition from deviceManagement
       description: Role definition this assignment is part of.
-      operationId: deviceManagement.roleDefinitions.roleAssignments_GetRoleDefinition
+      operationId: deviceManagement.roleDefinition.roleAssignment_GetRoleDefinition
       parameters:
         - name: roleDefinition-id
           in: path
@@ -2783,11 +2735,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.telecomExpenseManagementPartner'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -3011,11 +2959,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.termsAndConditions'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -3051,7 +2995,7 @@ paths:
         - deviceManagement.termsAndConditions
       summary: Get acceptanceStatuses from deviceManagement
       description: The list of acceptance statuses for this T&C policy.
-      operationId: deviceManagement.termsAndConditions_ListAcceptanceStatuses
+      operationId: deviceManagement.termsAndCondition_ListAcceptanceStatuses
       parameters:
         - name: termsAndConditions-id
           in: path
@@ -3130,7 +3074,7 @@ paths:
       tags:
         - deviceManagement.termsAndConditions
       summary: Create new navigation property to acceptanceStatuses for deviceManagement
-      operationId: deviceManagement.termsAndConditions_CreateAcceptanceStatuses
+      operationId: deviceManagement.termsAndCondition_CreateAcceptanceStatuses
       parameters:
         - name: termsAndConditions-id
           in: path
@@ -3163,7 +3107,7 @@ paths:
         - deviceManagement.termsAndConditions
       summary: Get acceptanceStatuses from deviceManagement
       description: The list of acceptance statuses for this T&C policy.
-      operationId: deviceManagement.termsAndConditions_GetAcceptanceStatuses
+      operationId: deviceManagement.termsAndCondition_GetAcceptanceStatuses
       parameters:
         - name: termsAndConditions-id
           in: path
@@ -3225,7 +3169,7 @@ paths:
       tags:
         - deviceManagement.termsAndConditions
       summary: Update the navigation property acceptanceStatuses in deviceManagement
-      operationId: deviceManagement.termsAndConditions_UpdateAcceptanceStatuses
+      operationId: deviceManagement.termsAndCondition_UpdateAcceptanceStatuses
       parameters:
         - name: termsAndConditions-id
           in: path
@@ -3252,11 +3196,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.termsAndConditionsAcceptanceStatus'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -3264,7 +3204,7 @@ paths:
       tags:
         - deviceManagement.termsAndConditions
       summary: Delete navigation property acceptanceStatuses for deviceManagement
-      operationId: deviceManagement.termsAndConditions_DeleteAcceptanceStatuses
+      operationId: deviceManagement.termsAndCondition_DeleteAcceptanceStatuses
       parameters:
         - name: termsAndConditions-id
           in: path
@@ -3300,7 +3240,7 @@ paths:
         - deviceManagement.termsAndConditions
       summary: Get termsAndConditions from deviceManagement
       description: Navigation link to the terms and conditions that are assigned.
-      operationId: deviceManagement.termsAndConditions.acceptanceStatuses_GetTermsAndConditions
+      operationId: deviceManagement.termsAndCondition.acceptanceStatus_GetTermsAndConditions
       parameters:
         - name: termsAndConditions-id
           in: path
@@ -3370,7 +3310,7 @@ paths:
         - deviceManagement.termsAndConditions
       summary: Get assignments from deviceManagement
       description: The list of assignments for this T&C policy.
-      operationId: deviceManagement.termsAndConditions_ListAssignments
+      operationId: deviceManagement.termsAndCondition_ListAssignments
       parameters:
         - name: termsAndConditions-id
           in: path
@@ -3438,7 +3378,7 @@ paths:
       tags:
         - deviceManagement.termsAndConditions
       summary: Create new navigation property to assignments for deviceManagement
-      operationId: deviceManagement.termsAndConditions_CreateAssignments
+      operationId: deviceManagement.termsAndCondition_CreateAssignments
       parameters:
         - name: termsAndConditions-id
           in: path
@@ -3471,7 +3411,7 @@ paths:
         - deviceManagement.termsAndConditions
       summary: Get assignments from deviceManagement
       description: The list of assignments for this T&C policy.
-      operationId: deviceManagement.termsAndConditions_GetAssignments
+      operationId: deviceManagement.termsAndCondition_GetAssignments
       parameters:
         - name: termsAndConditions-id
           in: path
@@ -3528,7 +3468,7 @@ paths:
       tags:
         - deviceManagement.termsAndConditions
       summary: Update the navigation property assignments in deviceManagement
-      operationId: deviceManagement.termsAndConditions_UpdateAssignments
+      operationId: deviceManagement.termsAndCondition_UpdateAssignments
       parameters:
         - name: termsAndConditions-id
           in: path
@@ -3555,11 +3495,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.termsAndConditionsAssignment'
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -3567,7 +3503,7 @@ paths:
       tags:
         - deviceManagement.termsAndConditions
       summary: Delete navigation property assignments for deviceManagement
-      operationId: deviceManagement.termsAndConditions_DeleteAssignments
+      operationId: deviceManagement.termsAndCondition_DeleteAssignments
       parameters:
         - name: termsAndConditions-id
           in: path
